<resources>
    <string name="app_name">Kotlin Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="java_fragment">Java fragment</string>
    <string name="kotlin_fragment">Kotlin fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="button">Click Button</string>
    <string name="dialogTitle">Delete File</string>
    <string name="dialogMessage">Deleting file may be harm your system</string>

    <string name="action_call">Call</string>
    <string name="action_sms">Sms</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_exit">Exit</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="sport_fragment">Sport Fragment</string>
    <string name="movie_fragment">Movie Fragment</string>
    <string name="listview">ListView</string>
    <string name="webview">WebView</string>
    <string name="tablayout">TabLayout</string>
    <string name="seekbar">SeekBar</string>
    <string name="alertdialog">AlertDialog</string>
    <string name="context_menu">Context Menu</string>
    <string name="tablayout_with_viewpager">TabLayout with ViewPager</string>
    <string name="dom_parser">DOM Parser</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="retrofit">Retrofit</string>
    <string name="nested_recyclerview">Nested Recyclerview</string>
    <string name="retrofit_post">Retrofit Post</string>
    <string name="volley_data_fetching">Volley Data Fetching</string>
    <string name="change_language">Change Language</string>
    <string name="android_fragment">Android fragment</string>
    <string name="crud">CRUD</string>
    <string name="pagination">Pagination</string>

    <string name="album_art_description">Album Art</string>
    <string name="play_pause">Play/Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>