<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".OptinActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_lan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/change_language" />

            <!--    <Button-->
            <!--        android:id="@+id/btn_array"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:text="Array" />-->

            <Button
                android:id="@+id/btn_listview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listview" />


            <Button
                android:id="@+id/btn_webview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webview" />

            <Button
                android:id="@+id/btn_seekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seekbar" />

            <Button
                android:id="@+id/btn_tablayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tablayout" />

            <Button
                android:id="@+id/btn_alertDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertdialog" />

            <Button
                android:id="@+id/btn_context_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/context_menu" />

            <Button
                android:id="@+id/options_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Options Menu" />

            <Button
                android:id="@+id/tab_with_viewpager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tablayout_with_viewpager" />

            <Button
                android:id="@+id/dom_parser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dom_parser" />

            <Button
                android:id="@+id/btn_array"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Array" />

            <Button
                android:id="@+id/recyclerview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recyclerview" />

            <Button
                android:id="@+id/retrofit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrofit" />


            <Button
                android:id="@+id/nested_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nested_recyclerview" />


            <Button
                android:id="@+id/post_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrofit_post" />

            <Button
                android:id="@+id/volley_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volley_data_fetching" />


            <Button
                android:id="@+id/btn_crud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crud" />

            <Button
                android:id="@+id/btn_pagination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagination" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Galley" />

            <Button
                android:id="@+id/btn_pagination_volly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="pagination Volley" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>