<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".PlaybackActivity">

    <ImageView
        android:id="@+id/album_art_audio"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/album_art_background"
        android:contentDescription="@string/album_art_description"
        android:scaleType="centerCrop"
        android:src="@drawable/iv_music_album" />

    <!-- Title -->
    <TextView
        android:id="@+id/audio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/album_art_audio"
        android:layout_centerHorizontal="true"
        android:gravity="center"

        android:layout_marginTop="16dp"
        android:text="Title"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!-- Artist -->
    <TextView
        android:id="@+id/audio_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/audio_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="Artist"
        android:textColor="#B0B0B0"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/audio_artist"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3:02" />

        <!-- SeekBar -->
        <SeekBar
            android:id="@+id/audio_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/end_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0:00" />

    </LinearLayout>


    <!-- Playback Controls -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/previous"
            android:src="@android:drawable/ic_media_previous" />

        <ImageView
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/play_pause"
            android:src="@android:drawable/ic_media_play" />

        <ImageView
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/next"
            android:src="@android:drawable/ic_media_next" />

    </LinearLayout>


</RelativeLayout>